@@ -1,32 +1,29 @@
 package com.sakura.meetu.controller;
 
-import cn.hutool.poi.excel.ExcelUtil;
 import cn.hutool.poi.excel.ExcelReader;
+import cn.hutool.poi.excel.ExcelUtil;
 import cn.hutool.poi.excel.ExcelWriter;
-import javax.servlet.http.HttpServletResponse;
-import javax.servlet.ServletOutputStream;
-import java.net.URLEncoder;
-import com.baomidou.mybatisplus.extension.plugins.pagination.Page;
-import org.springframework.web.bind.annotation.*;
-import javax.annotation.Resource;
-import java.io.InputStream;
-import java.util.List;
-import com.baomidou.mybatisplus.core.conditions.query.QueryWrapper;
-import com.sakura.meetu.utils.Result;
-import org.springframework.web.multipart.MultipartFile;
-import com.sakura.meetu.service.IImService;
 import com.sakura.meetu.entity.Im;
+import com.sakura.meetu.service.IImService;
+import com.sakura.meetu.utils.Result;
+import org.springframework.web.bind.annotation.*;
+import org.springframework.web.multipart.MultipartFile;
 
-import org.springframework.web.bind.annotation.RestController;
+import javax.servlet.ServletOutputStream;
+import javax.servlet.http.HttpServletResponse;
+import java.io.InputStream;
+import java.net.URLEncoder;
+import java.nio.charset.StandardCharsets;
+import java.util.List;
 
 /**
-* <p>
-* 聊天信息表 前端控制器
-* </p>
-*
-* @author sakura
-* @since 2023-08-20
-*/
+ * <p>
+ * 聊天信息表 前端控制器
+ * </p>
+ *
+ * @author sakura
+ * @since 2023-08-20
+ */
 @RestController
 @RequestMapping("/api/im")
 public class ImController {
@@ -66,23 +63,27 @@ public class ImController {
         return Result.success(imService.list());
     }
 
+    @GetMapping("/init/{limit}")
+    public Result findAllInit(@PathVariable Integer limit) {
+        return imService.initMessageList(limit);
+    }
+
     @GetMapping("/{id}")
     public Result findOne(@PathVariable Integer id) {
         return Result.success(imService.getById(id));
     }
 
     @GetMapping("/page")
-    public Result findPage(@RequestParam(defaultValue = "") String name,
-                        @RequestParam Integer pageNum,
-                        @RequestParam Integer pageSize) {
-        QueryWrapper<Im> queryWrapper = new QueryWrapper<Im>().orderByDesc("id");
-        queryWrapper.like(!"".equals(name), "name", name);
-        return Result.success(imService.page(new Page<>(pageNum, pageSize), queryWrapper));
+    public Result findPage(@RequestParam(defaultValue = "") String username,
+                           @RequestParam(defaultValue = "") String text,
+                           @RequestParam Integer pageNum,
+                           @RequestParam Integer pageSize) {
+        return imService.queryPage(username, text, pageNum, pageSize);
     }
 
     /**
-    * 导出接口
-    */
+     * 导出接口
+     */
     @GetMapping("/export")
     public void export(HttpServletResponse response) throws Exception {
         // 从数据库查询出所有的数据
@@ -95,7 +96,7 @@ public class ImController {
 
         // 设置浏览器响应的格式
         response.setContentType("application/vnd.openxmlformats-officedocument.spreadsheetml.sheet;charset=utf-8");
-        String fileName = URLEncoder.encode("Im信息表", "UTF-8");
+        String fileName = URLEncoder.encode("Im信息表", StandardCharsets.UTF_8);
         response.setHeader("Content-Disposition", "attachment;filename=" + fileName + ".xlsx");
 
         ServletOutputStream out = response.getOutputStream();
@@ -105,10 +106,11 @@ public class ImController {
     }
 
     /**
-    * excel 导入
-    * @param file
-    * @throws Exception
-    */
+     * excel 导入
+     *
+     * @param file
+     * @throws Exception
+     */
     @PostMapping("/import")
     public Result imp(MultipartFile file) throws Exception {
         InputStream inputStream = file.getInputStream();
